tests/org.eclipse.php.core.tests/workspace/errors/php53/testDuplicateTypeDeclaration1.pdtt
--TEST--
Test for duplicate type declaration check with use statements
--FILE--
<?php
namespace name;

use Bar;
use name\Bar1 as Bar2;
use name\Foo as Foo;
use name\Foo1;

class Bar {
}

class Foo {
}

class Bar2 {
}

class Foo1 {
}
--EXPECT--
[line=4, start=27, end=30] The import Bar cannot be resolved
[line=5, start=36, end=45] The import name\Bar1 cannot be resolved
[line=6, start=59, end=67] The import name\Foo is unnecessary
[line=7, start=80, end=89] The import name\Foo1 is unnecessary
[line=9, start=98, end=101] Cannot declare type Bar because the name is already in use
[line=15, start=128, end=132] Cannot declare type Bar2 because the name is already in use